
- #11773: ocamlyacc: Do not allow quoted literals (such as 'a' or "bc")
  in a token name or %type declaration.  Previously such literals were
  accepted by ocamlyacc, but produced malformed OCaml that was rejected
  by the compiler.
  (Demi Marie Obenour)

- #11774: ocamlyacc: fail if there is an I/O error
  (Demi Marie Obenour)

### Manual and documentation:

- #9430, #11291: Document the general desugaring rules for binding operators.
  (Gabriel Scherer, review by Nicolás Ojeda Bär)

- #11481: Fix the type of Unix.umask to Unix.file_perm -> Unix.file_perm
  (Favonia, review by Sébastien Hinderer)

- #11676: Fix missing since annotation in the `Sys` and `Format` modules
  (Github user Bukolab99, review by Florian Angeletti)

### Compiler user-interface and warnings:

- #11679: Improve the error message about too many arguments to a function
  (Jules Aguillon, review by Gabriel Scherer and Florian Angeletti)

- #10009: Improve the error reported by mismatched struct/sig and =/: in module
  and module type bindings.
  (Jules Aguillon, review by Gabriel Scherer)

- #11530: Include kinds in kind mismatch error message.
  (Leonhard Markert, review by Gabriel Scherer and Florian Angeletti)

- #10818: Preserve integer literal formatting in type hint.
  (Leonhard Markert, review by Gabriel Scherer and Florian Angeletti)

- #11338: Turn some partial application warnings into hints.
  (Leo White, review by Stephen Dolan)

- #10911: Improve the location reported by parenthesized assert expressions
  (Fabian Hemmer, review by Gabriel Scherer)

- #1391, #7645, #3922: Add an early error when compiling different
  modules with mismatching -for-pack
  (Pierre Chambart and Vincent Laviron, review by Mark Shinwell)

- #11635, #5461, #10564: Turn warning 31 (Module_linked_twice) into a hard error
  (Hugo Heuzard, review by Valentin Gatien-Baron and Gabriel Scherer)

- #11646: Add colors to error message hints.
  (Christiana Anthony, review by Florian Angeletti)
